k8s-manifest-files/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-app
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - port: 80
    targetPort: 80
